--- a/app/public/index.html
+++ b/app/public/index.html
@@ -183,8 +183,8 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">feedback</i>Feedback</div>
 					<div class="collapsible-body">
 						<p>
-							<!--Do you have some feedback or want to ask for some new features? The official gitlab page is <a target="_blank" href="https://gitlab.com/ExtendLord/DeezLoader-Reborn">/ExtendLord/DeezLoader-Reborn</a>.-->
-							This software is not maintained anymore
+							Do you have some feedback or want to ask for some new features? The official gitlab page is <a target="_blank" href="https://github.com/Deezloader/DeezLoader-Reborn">/ExtendLord/DeezLoader-Reborn</a>.
+
 						</p>
 					</div>
 				</li>
