view: add my playlists tab

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -594,12 +594,71 @@
 
 		<div class="col s12 tab-wrapper">
 			<ul class="tabs tabs-fixed-width" style="overflow: hidden">
+				<li class="tab col s2"><a href="#tab_my_playlists">My Playlists</a></li>
 				<li class="tab col s3"><a href="#tab_search">Search</a></li>
 				<li class="tab col s3"><a href="#tab_charts">Charts</a></li>
 				<li class="tab col s3"><a href="#tab_url">Download from URL</a></li>
 				<li class="tab col s3"><a href="#tab_downloads">Downloads</a></li>
 			</ul>
 		</div>
+
+		<!-- ############ PLAYLISTS ############ -->
+
+		<div id="tab_my_playlists">
+
+			<div class="row">
+					<div class="col s12">
+						<button id="myPlaylistsRefresh" style="width: 100%" class="btn btn-flat btn-large btn-block right indigo white-text">
+							Refresh
+						</button>
+					</div>
+				</div>
+
+			<div class="row" id="tab_my_playlists_results">
+				<div id="tab_my_playlists_results_searchProgressIndicator" class="row center hide">
+
+				</div>
+				<table id="tab_my_playlists_table_results" class="highlight col s12 responsive-table">
+					<thead>
+					<tr class="animated fadeInUp hide" id="tab_my_playlists_table_results_thead_playlist">
+						<td><!--cover--></td>
+						<td>Name</td>
+						<td>Songs</td>
+						<td><!--download_link--></td>
+					</tr>
+					</thead>
+					<tbody id="tab_my_playlists_table_results_tbody_loadingIndicator" class="hide">
+					<tr>
+						<td class="center">
+							<div class="preloader-wrapper big active">
+								<div class="spinner-layer">
+									<div class="circle-clipper left">
+										<div class="circle"></div>
+									</div>
+									<div class="gap-patch">
+										<div class="circle"></div>
+									</div>
+									<div class="circle-clipper right">
+										<div class="circle"></div>
+									</div>
+								</div>
+							</div>
+						</td>
+					</tr>
+					</tbody>
+					<tbody id="tab_my_playlists_table_results_tbody_results">
+					</tbody>
+					<tbody id="tab_my_playlists_table_results_tbody_noResults" class="animated fadeInUp hide">
+					<tr>
+						<td class="center">Nothing found!</td>
+					</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+
+		<!-- ############ TAB SEARCH ############ -->
+
 		<div id="tab_search">
 			<form id="tab_search_form_search" class="row">
 				<div class="inline-input-group">
@@ -696,6 +755,7 @@
 				</table>
 			</div>
 		</div>
+
 		<div id="tab_charts">
 			<div class="row">
 				<div class="input-field col s12">
@@ -742,6 +802,7 @@
 				</tbody>
 			</table>
 		</div>
+
 		<div id="tab_url">
 			<form id="tab_url_form_url" class="row">
 				<div class="inline-input-group">
@@ -750,6 +811,7 @@
 				</div>
 			</form>
 		</div>
+
 		<div id="tab_downloads">
 			<div class="row">
 				<div class="col s6">
@@ -789,7 +851,8 @@
 		<div class="footer-copyright">
 			<div class="container">
 				&copy; Deezloader original code by <a class="white-text" href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a>.
-				Currently maintained by <a class="white-text" href="https://www.reddit.com/user/ExtendLord/">ExtendLord</a>.
+				Then by <a class="white-text" href="https://www.reddit.com/user/ExtendLord/">ExtendLord</a>.
+				And finally maintained by <a class="white-text" href="https://www.reddit.com/user/ivandelabeldad/">ivandelabeldad</a>.
 			</div>
 		</div>
 	</footer>
