view: change version and update changelog on app

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -169,7 +169,7 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">info</i>About</div>
 					<div class="collapsible-body">
 						<p>
-							<b>Version:</b> 3.1.0<br/>
+							<b>Version:</b> 3.2.0<br/>
 							<b>telegram Channel:</b> <a href="https://t.me/joinchat/AAAAAFCRjRpUr-IF96RV3g">DeezLoader-Reborn</a><br>
 							<b>Original Programmer:</b> <a href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a><br/>
 							<b>Former Maintainers:</b> <a href="https://www.reddit.com/user/ParadoxalManiak/">ParadoxalManiak</a>, <a href="https://www.reddit.com/user/_snwflake/">snwflake</a><br>
@@ -212,6 +212,8 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">history</i>Changelog</div>
 					<div class="collapsible-body">
 						<p>
+							<b>Version 3.2.0</b><br/>
+							- Add my playlists tab with the user public playlists<br/>
 							<b>Version 3.1.0</b><br/>
 							- Fixed Download Freeze<br/>
 							- Improved logs<br/>
