view: add soundiiz tab to convert playlists to deezer

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -597,10 +597,11 @@
 		<div class="col s12 tab-wrapper">
 			<ul class="tabs tabs-fixed-width" style="overflow: hidden">
 				<li class="tab col s2"><a href="#tab_my_playlists">My Playlists</a></li>
-				<li class="tab col s3"><a href="#tab_search">Search</a></li>
-				<li class="tab col s3"><a href="#tab_charts">Charts</a></li>
-				<li class="tab col s3"><a href="#tab_url">Download from URL</a></li>
-				<li class="tab col s3"><a href="#tab_downloads">Downloads</a></li>
+				<li class="tab col s2"><a href="#tab_search">Search</a></li>
+				<li class="tab col s2"><a href="#tab_charts">Charts</a></li>
+				<li class="tab col s2"><a href="#tab_url">Download from URL</a></li>
+				<li class="tab col s2"><a href="#tab_downloads">Downloads</a></li>
+				<li class="tab col s2"><a href="#tab_playlists_converter" id="tab_playlists_converter_link">Playlist Converter</a></li>
 			</ul>
 		</div>
 
@@ -657,6 +658,11 @@
 					</tbody>
 				</table>
 			</div>
+		</div>
+
+		<!-- ############ TAB PLAYLIST CONVERTER ############ -->
+		<div id="tab_playlists_converter">
+			<webview id="playlists_converter_webview" src="https://soundiiz.com/webapp/playlists" style="display:flex; flex: 1 1 auto;" autosize></webview>
 		</div>
 
 		<!-- ############ TAB SEARCH ############ -->
