build: update version

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -169,7 +169,7 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">info</i>About</div>
 					<div class="collapsible-body">
 						<p>
-							<b>Version:</b> 3.2.0<br/>
+							<b>Version:</b> 3.3.0<br/>
 							<b>telegram Channel:</b> <a href="https://t.me/joinchat/AAAAAFCRjRpUr-IF96RV3g">DeezLoader-Reborn</a><br>
 							<b>Original Programmer:</b> <a href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a><br/>
 							<b>Former Maintainers:</b> <a href="https://www.reddit.com/user/ParadoxalManiak/">ParadoxalManiak</a>, <a href="https://www.reddit.com/user/_snwflake/">snwflake</a><br>
@@ -212,6 +212,8 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">history</i>Changelog</div>
 					<div class="collapsible-body">
 						<p>
+							<b>Version 3.3.0</b><br/>
+							- Add playlist converter by soundiiz<br/>
 							<b>Version 3.2.0</b><br/>
 							- Add my playlists tab with the user public playlists<br/>
 							<b>Version 3.1.0</b><br/>
@@ -568,7 +570,7 @@
 		<div class="jumbotron">
 			<div class="container">
 				<div class="clear-nav">
-					<div class="logo"><a href="#">Deezloader <sup>3.2.0</sup></a></div>
+					<div class="logo"><a href="#">Deezloader <sup>3.3.0</sup></a></div>
 					<div class="navigation">
 						<ul class="right">
 							<li>
@@ -597,11 +599,13 @@
 		<div class="col s12 tab-wrapper">
 			<ul class="tabs tabs-fixed-width" style="overflow: hidden">
 				<li class="tab col s2"><a href="#tab_my_playlists">My Playlists</a></li>
+				<li class="tab col s2"><a href="#tab_playlists_converter" id="tab_playlists_converter_link">
+					Playlist Converter
+				</a></li>
 				<li class="tab col s2"><a href="#tab_search">Search</a></li>
 				<li class="tab col s2"><a href="#tab_charts">Charts</a></li>
 				<li class="tab col s2"><a href="#tab_url">Download from URL</a></li>
 				<li class="tab col s2"><a href="#tab_downloads">Downloads</a></li>
-				<li class="tab col s2"><a href="#tab_playlists_converter" id="tab_playlists_converter_link">Playlist Converter</a></li>
 			</ul>
 		</div>
 
