docs: update readme, changelog and contributors

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -53,8 +53,9 @@
 		<footer class="center page-footer hide-on-small-and-down" style="width: 100%;bottom:0;position: fixed;left: 0;height: 50px;">
 			<div class="footer-copyright">
 				<div class="container">
-					&copy; Deezloader original code by <a class="white-text" href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a>.
-					Currently maintained by <a class="white-text" href="https://www.reddit.com/user/ExtendLord/">ExtendLord</a>.
+					&copy; Deezloader original code by <a class="white-text" href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a> and
+					<a class="white-text" href="https://www.reddit.com/user/ExtendLord/">ExtendLord</a>.
+					Currently maintained by <a class="white-text" href="https://github.com/ivandelabeldad/">ivandelabeldad</a>.
 				</div>
 			</div>
 		</footer>
@@ -172,8 +173,11 @@
 							<b>Version:</b> 3.3.0<br/>
 							<b>telegram Channel:</b> <a href="https://t.me/joinchat/AAAAAFCRjRpUr-IF96RV3g">DeezLoader-Reborn</a><br>
 							<b>Original Programmer:</b> <a href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a><br/>
-							<b>Former Maintainers:</b> <a href="https://www.reddit.com/user/ParadoxalManiak/">ParadoxalManiak</a>, <a href="https://www.reddit.com/user/_snwflake/">snwflake</a><br>
-							<b>Currently Maintained By:</b> <a href="https://www.reddit.com/user/ExtendLord/">ExtendLord</a><br>
+							<b>Former Maintainers:</b>
+							<a href="https://www.reddit.com/user/ParadoxalManiak/">ParadoxalManiak</a>,
+							<a href="https://www.reddit.com/user/_snwflake/">snwflake</a>,
+							<a href="https://www.reddit.com/user/ExtendLord/">ExtendLord</a><br>
+							<b>Currently Maintained By: </b><a href="https://github.com/ivandelabeldad/">ivandelabeldad</a><br>
 							<b>telegram Channel:</b> <a href="https://t.me/joinchat/AAAAAFCRjRpUr-IF96RV3g">DeezLoader-Reborn</a><br>
 							<b>Interface:</b> <a href="http://materializecss.com/">materializecss</a><br/>
 						</p>
@@ -433,7 +437,7 @@
 							Donating is completely optional, Deezloader is and will be forever free to use.
 						</p>
 						<div style="font-size:16px;margin:0 auto" class="blockchain-btn"
-								 data-address="1A25gu2vMXLfQBYArYLMBcTpnuwPiKW6vL"
+								 data-address="3DVsShXt4GpPax6hSqatTFRJxM2VQ7jnpa"
 								 data-shared="false">
 							<div class="blockchain stage-begin" style="cursor: pointer;text-align: center">
 								<img src="https://blockchain.info/Resources/buttons/donate_64.png"/>
@@ -859,12 +863,12 @@
 			<i class="large material-icons">keyboard_arrow_up</i>
 		</a>
 	</div>
-	<footer class="page-footer hide-on-small-and-down">
+	<footer class="center page-footer hide-on-small-and-down">
 		<div class="footer-copyright">
 			<div class="container">
-				&copy; Deezloader original code by <a class="white-text" href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a>.
-				Then by <a class="white-text" href="https://www.reddit.com/user/ExtendLord/">ExtendLord</a>.
-				And finally maintained by <a class="white-text" href="https://www.reddit.com/user/ivandelabeldad/">ivandelabeldad</a>.
+				&copy; Deezloader original code by <a class="white-text" href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a> and
+				<a class="white-text" href="https://www.reddit.com/user/ExtendLord/">ExtendLord</a>.
+				Currently maintained by <a class="white-text" href="https://github.com/ivandelabeldad/">ivandelabeldad</a>.
 			</div>
 		</div>
 	</footer>
