--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Deezloader</title>
+	<title>Deezloader Remaster</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div id="title-bar">
-	<div id="title">Deezloader App v<span id="application_version"></span></div>
+	<div id="title">Deezloader Remaster v<span id="application_version"></span></div>
 
 	<div id="title-bar-btns">
 		<button id="min-btn"><i class="material-icons">remove</i></button>
@@ -187,7 +187,7 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">feedback</i>Feedback</div>
 					<div class="collapsible-body">
 						<p>
-							Do you have some feedback or want to ask for some new features? The official gitlab page is <a target="_blank" href="https://github.com/Deezloader/DeezLoader-Reborn">/ExtendLord/DeezLoader-Reborn</a>.
+							Do you have some feedback or want to ask for some new features? The official repository page is <a target="_blank" href="https://github.com/ivandelabeldad/DeezLoader-Remaster">https://github.com/ivandelabeldad/DeezLoader-Remaster</a>.
 
 						</p>
 					</div>
@@ -196,9 +196,8 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">bug_report</i>Bugs</div>
 					<div class="collapsible-body">
 						<p>
-							<!--If you experience any bugs, please open a new issue in <a href="https://gitlab.com/ExtendLord/DeezLoader-Reborn">this
-							repository</a>.-->
-							This software is not maintained anymore
+							If you experience any bugs, please open a new issue in <a href="https://github.com/ivandelabeldad/DeezLoader-Remaster">this
+							repository</a>.
 						</p>
 					</div>
 				</li>
@@ -574,7 +573,7 @@
 		<div class="jumbotron">
 			<div class="container">
 				<div class="clear-nav">
-					<div class="logo"><a href="#">Deezloader <sup>3.3.0</sup></a></div>
+					<div class="logo"><a href="#">Deezloader <b>Remaster</b> <sup>3.3.0</sup></a></div>
 					<div class="navigation">
 						<ul class="right">
 							<li>
