refactor: remove unnecesary js and add cdn

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -5,7 +5,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<script type="text/javascript" src="js/socket.io.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.js"></script>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css"/>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
@@ -170,7 +170,7 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">info</i>About</div>
 					<div class="collapsible-body">
 						<p>
-							<b>Version:</b> 3.3.0<br/>
+							<b>Version:</b> 4.0.0<br/>
 							<b>telegram Channel:</b> <a href="https://t.me/joinchat/AAAAAFCRjRpUr-IF96RV3g">DeezLoader-Reborn</a><br>
 							<b>Original Programmer:</b> <a href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a><br/>
 							<b>Former Maintainers:</b>
@@ -215,10 +215,16 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">history</i>Changelog</div>
 					<div class="collapsible-body">
 						<p>
+							<b>Version 4.0.0</b><br/>
+							- Change project name to DeezLoader Remaster<br/>
+							- Refactor css and js code and added cdns<br/>
+							- Update maintainers information<br/>
+							- Improved title bar<br/>
+							- Change pastebin version check<br/>
 							<b>Version 3.3.0</b><br/>
-							- Add playlist converter by soundiiz<br/>
+							- Added playlist converter by soundiiz<br/>
 							<b>Version 3.2.0</b><br/>
-							- Add my playlists tab with the user public playlists<br/>
+							- Added my playlists tab with the user public playlists<br/>
 							<b>Version 3.1.0</b><br/>
 							- Fixed Download Freeze<br/>
 							- Improved logs<br/>
@@ -573,7 +579,7 @@
 		<div class="jumbotron">
 			<div class="container">
 				<div class="clear-nav">
-					<div class="logo"><a href="#">Deezloader <b>Remaster</b> <sup>3.3.0</sup></a></div>
+					<div class="logo"><a href="#">Deezloader <b>Remaster</b> <sup>4.0.0</sup></a></div>
 					<div class="navigation">
 						<ul class="right">
 							<li>
@@ -877,12 +883,12 @@
 	window.module = module;
 	module = undefined;
 }</script>
-<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-<script type="text/javascript" src="js/materialize.min.js"></script>
-<script type="text/javascript" src="js/js.cookie.js"></script>
-<script src="js/vue.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.0/js.cookie.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.13/vue.min.js"></script>
 <script type="text/javascript" src="https://blockchain.info/Resources/js/pay-now-button.js"></script>
-<script src="js/appBase.js"></script>
+<script type="text/javascript" src="js/appBase.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <script>if (window.module) module = window.module;</script>
 </body>
