refactor: read version from package.json

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -170,7 +170,7 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">info</i>About</div>
 					<div class="collapsible-body">
 						<p>
-							<b>Version:</b> 4.0.0<br/>
+							<b>Version:</b> <span class="version">0.0.0</span><br/>
 							<b>telegram Channel:</b> <a href="https://t.me/joinchat/AAAAAFCRjRpUr-IF96RV3g">DeezLoader-Reborn</a><br>
 							<b>Original Programmer:</b> <a href="https://boerse.to/members/zzmtv.3378614/">ZzMTV</a><br/>
 							<b>Former Maintainers:</b>
@@ -215,7 +215,7 @@
 					<div class="collapsible-header waves-effect"><i class="material-icons">history</i>Changelog</div>
 					<div class="collapsible-body">
 						<p>
-							<b>Version 4.0.0</b><br/>
+							<b class="version">Version 0.0.0</b><br/>
 							- Change project name to DeezLoader Remaster<br/>
 							- Refactor css and js code and added cdns<br/>
 							- Update maintainers information<br/>
@@ -601,7 +601,7 @@
 		<div class="jumbotron">
 			<div class="container">
 				<div class="clear-nav">
-					<div class="logo"><a href="#">Deezloader <b>Remaster</b> <sup>4.0.0</sup></a></div>
+					<div class="logo"><a href="#">Deezloader <b>Remaster</b> <sup class="version">0.0.0</sup></a></div>
 					<div class="navigation">
 						<ul class="right">
 							<li>
